--- a/lab.html
+++ b/lab.html
@@ -178,7 +178,7 @@
                                    class="form-control input-sm header-search-input jump-to-field js-jump-to-field js-site-search-focus "
                                    data-hotkey="s,/"
                                    name="q"
-                                   value="人工智能"
+                                   value=""
                                    placeholder="Search or jump to…"
                                    data-unscoped-placeholder="Search or jump to…"
                                    data-scoped-placeholder="Search or jump to…"
@@ -774,7 +774,7 @@
                 </form>
                 <button class="btn ml-2 d-none d-md-block" type="submit">Search</button>
             </div>
-            <div class="col-12 col-md-10 float-left px-2 pt-3 pt-md-0 codesearch-results">
+            <div class="col-12 col-md-9 float-left px-2 pt-3 pt-md-0 codesearch-results">
                 <div class="px-2">
 
 
@@ -884,23 +884,77 @@
                             </tbody>
                         </table>
                     </ul>
-                    <div class="paginate-container codesearch-pagination-container"></div>
-
-
                 </div>
             </div>
+            <div class="paginate-container codesearch-pagination-container"><div class="col-md-3 mt-6 mt-md-0">
+
+
+
+                <h2 class="h6 text-uppercase border-bottom pb-5 pb-md-3">相关实验室</h2>
+                <dl class="mt-3 mb-6">
+                    <dt class="d-none f6 text-gray">
+                        Repository
+                    </dt>
+                    <dd class="mb-2">
+                        <svg class="octicon octicon-link text-gray-light mr-1" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg>
+                        <a href="https://github.com/vuejs/vue" data-ga-click="Topics, go to vuejs/vue, location:topic page"><span class="css-truncate css-truncate-target" title="vuejs/vue">智能与分布计算实验室</span></a>
+                    </dd>
+
+                    <dt class="d-none f6 text-gray">Website</dt>
+                    <dd class="mb-2">
+                        <svg class="octicon octicon-link text-gray-light mr-1" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg>
+                        <a href="https://vuejs.org/" data-ga-click="Topics, go to external url, location:topic page"><span class="css-truncate css-truncate-target" title="vuejs.org">认知计算与智能信息处理实验室</span></a>
+                    </dd>
+
+                    <dt class="d-none f6 text-gray">Wikipedia</dt>
+                    <dd class="mb-2">
+                        <svg class="octicon octicon-link text-gray-light mr-1" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg>
+                        <a href="https://en.wikipedia.org/wiki/Vue.js" data-ga-click="Topics, go to Wikipedia entry, location:topic page">智能与嵌入式计算实验室</a>
+                    </dd>
+                </dl>
+
+
+                <div class="d-sm-flex flex-justify-between flex-items-baseline border-bottom pb-5 pb-md-3 mb-3">
+                    <h2 class="h6 text-uppercase">Related topics</h2>
+                    <a href="/topics" class="f6 link-gray" data-ga-click="Topics, go to topics, location:related topics;text:see more topics">See more topics</a>
+                </div>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/angular" title="Topic: angular" data-ga-click="Topics, go to topic, location:related topics">
+                    大数据
+                </a>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/react" title="Topic: react" data-ga-click="Topics, go to topic, location:related topics">
+                    云计算
+                </a>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/webpack" title="Topic: webpack" data-ga-click="Topics, go to topic, location:related topics">
+                    系统软件
+                </a>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/demo" title="Topic: demo" data-ga-click="Topics, go to topic, location:related topics">
+                    体系结构
+                </a>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/vue-router" title="Topic: vue-router" data-ga-click="Topics, go to topic, location:related topics">
+                    数据库
+                </a>
+
+                <a class="topic-tag topic-tag-link f6 my-1" href="/topics/css" title="Topic: css" data-ga-click="Topics, go to topic, location:related topics">
+                    云存储
+                </a>
+
+
+
+            </div></div>
+
 
             <div class="px-3 d-block d-sm-none">
                 <a href="/search/advanced?q=java" class="f6">Advanced search</a>
             </div>
         </div>
-
-
     </main>
     <div class="modal-backdrop js-touch-events"></div>
 </div>
-
-
 <!--<div class="footer container-lg width-full p-responsive" role="contentinfo">-->
 <!--    <div class="position-relative d-flex flex-row-reverse flex-lg-row flex-wrap flex-lg-nowrap flex-justify-center flex-lg-justify-between pt-6 pb-2 mt-6 f6 text-gray border-top border-gray-light ">-->
 <!--        <ul class="list-style-none d-flex flex-wrap col-12 col-lg-5 flex-justify-center flex-lg-justify-between mb-2 mb-lg-0">-->
@@ -916,7 +970,6 @@
 <!--                                        data-ga-click="Footer, go to status, text:status">Status</a></li>-->
 <!--            <li><a data-ga-click="Footer, go to help, text:help" href="https://help.github.com">Help</a></li>-->
 <!--        </ul>-->
-
 <!--        <a aria-label="Homepage" title="GitHub" class="footer-octicon d-none d-lg-block mx-lg-4"-->
 <!--           href="https://github.com">-->
 <!--            <svg height="24" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="24"-->
@@ -937,15 +990,12 @@
 <!--            <li class="mr-3 mr-lg-0"><a href="https://github.blog"-->
 <!--                                        data-ga-click="Footer, go to blog, text:blog">Blog</a></li>-->
 <!--            <li><a data-ga-click="Footer, go to about, text:about" href="https://github.com/about">About</a></li>-->
-
 <!--        </ul>-->
 <!--    </div>-->
 <!--    <div class="d-flex flex-justify-center pb-6">-->
 <!--        <span class="f6 text-gray-light"></span>-->
 <!--    </div>-->
 </div>
-
-
 <div id="ajax-error-message" class="ajax-error-message flash flash-error">
     <svg class="octicon octicon-alert" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
         <path fill-rule="evenodd"
@@ -959,8 +1009,6 @@
     </button>
     You can’t perform that action at this time.
 </div>
-
-
 <script crossorigin="anonymous"
         integrity="sha512-BlCvumXWTvpASEdhCGiahDUDf7Bwb8QXA2XnnSnqJ9QafxcNcrNYUNYS2wXmd3nEpO//+zlZa9DSV9zmu5MqRg=="
         type="application/javascript"
@@ -968,13 +1016,10 @@
 <script crossorigin="anonymous"
         integrity="sha512-P3eW1tSt9yMTYl/1xec+Lu6c4gMoD1nzYkWtT8U4QbULnfRphxXsKzc6vlV2Kul5mRisdch6TWvANtRj7150OQ=="
         type="application/javascript" src="https://github.githubassets.com/assets/frameworks-369fa3dc.js"></script>
-
 <script crossorigin="anonymous" async="async"
         integrity="sha512-gKQrv9Do0vBiUzRVyenSdKy7yq/+E4CRu0CQdP1xLfJXjzBprU7scJnl971O1iwK3yKkBZt1Ft29rpU4qL633Q=="
         type="application/javascript"
         src="https://github.githubassets.com/assets/github-bootstrap-053f7af5.js"></script>
-
-
 <div class="js-stale-session-flash stale-session-flash flash flash-warn flash-banner" hidden
 >
     <svg class="octicon octicon-alert" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
@@ -1000,14 +1045,11 @@
         </details-dialog>
     </details>
 </template>
-
 <div class="Popover js-hovercard-content position-absolute" style="display: none; outline: none;" tabindex="0">
     <div class="Popover-message Popover-message--bottom-left Popover-message--large Box box-shadow-large"
          style="width:360px;">
     </div>
 </div>
-
 <div aria-live="polite" class="js-global-screen-reader-notice sr-only"></div>
-
 </body>
 </html>
