--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@ Click the help icon above to learn more.
         background: #fff;
     }
     #mainnav li {
-        padding: 0 10px;
+        padding: 0 50px;
     }
     #mainnav ul li.get-the-app {
         padding: 0 1px;
     }
-    #mainnav ul li a{font-size:13px;}
+    #mainnav ul li a{font-size:25px;}
     .calltoactive_btn {
         background: #08aba6; border:1px #08aba6 solid;
         color: #fff;
@@ -352,30 +352,18 @@ Click the help icon above to learn more.
             <div class="container">
                 <div class="row">
                     <div class="col-md-2 col-sm-8 col-xs-12">
-                        <a href="#" title="hust"><img class="site-logo" src="images/logo1.png" alt="London Waste Clearance &#8211; Litta App" /></a>
+                        <a href="#" title="hust"><img class="site-logo" src="images/hustlogo1.png"   /></a>
                     </div>
-                    <!--                    <div class="col-md-10 col-sm-4 col-xs-12">-->
-                    <!--                        <div class="btn-menu"></div>-->
-                    <!--                        <nav id="mainnav" class="mainnav" role="navigation">-->
-                    <!--                            <div class="menu-primary-menu-container"><ul id="menu-primary-menu" class="menu"><li id="menu-item-581" class="scrollable menu-item menu-item-type-custom menu-item-object-custom menu-item-581"><a href="#abouttheapp">About the App</a></li>-->
-                    <!--                                <li id="menu-item-169" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-169"><a href="http://litta.co/service/">Our Services</a>-->
-                    <!--                                    <ul class="sub-menu">-->
-                    <!--                                        <li id="menu-item-359" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-359"><a href="http://litta.co/skips/">Skips</a></li>-->
-                    <!--                                        <li id="menu-item-443" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-443"><a href="http://litta.co/junk-removal/">Junk Removal</a></li>-->
-                    <!--                                        <li id="menu-item-442" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-442"><a href="http://litta.co/appliance-removal/">Appliances</a></li>-->
-                    <!--                                        <li id="menu-item-441" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-441"><a href="http://litta.co/furniture/">Furniture</a></li>-->
-                    <!--                                        <li id="menu-item-440" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-440"><a href="http://litta.co/other/">Other Items</a></li>-->
-                    <!--                                    </ul>-->
-                    <!--                                </li>-->
-                    <!--                                <li id="menu-item-322" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-322"><a href="http://litta.co/become-a-partner/">Become a Partner</a></li>-->
-                    <!--                                <li id="menu-item-582" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-582"><a href="http://litta.co/invest-in-us/">Invest in us</a></li>-->
-                    <!--                                <li id="menu-item-237" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-237"><a href="http://litta.co/faq/">FAQ</a></li>-->
-                    <!--                                <li id="menu-item-166" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-166"><a href="http://litta.co/blog/">Blog</a></li>-->
-                    <!--                                <li id="menu-item-589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-589"><a href="http://litta.co/contact/">Contact</a></li>-->
-                    <!--                                <li id="menu-item-745" class="get-the-app menu-item menu-item-type-custom menu-item-object-custom menu-item-745"><a href="https://itunes.apple.com/gb/app/litta/id1230895606?mt=8">GET THE APP</a></li>-->
-                    <!--                                <li id="menu-item-767" class="get-the-app menu-item menu-item-type-custom menu-item-object-custom menu-item-767"><a href="http://clearance.litta.co/">BOOK A WASTE CLEARANCE</a></li>-->
-                    <!--                            </ul></div>					</nav>&lt;!&ndash; #site-navigation &ndash;&gt;-->
-                    <!--                    </div>-->
+                                        <div class="col-md-10 col-sm-4 col-xs-12">
+                                            <div class="btn-menu"></div>
+                                            <nav id="mainnav" class="mainnav" role="navigation">
+                                                <div class="menu-primary-menu-container"><ul id="menu-primary-menu" class="menu"><li id="menu-item-581" class="scrollable menu-item menu-item-type-custom menu-item-object-custom menu-item-581"><a href="#abouttheapp">主页</a></li>
+                                                    <li id="menu-item-169" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-169"><a href="http://litta.co/service/">院系</a>
+                                                    </li>
+                                                    <li id="menu-item-322" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-322"><a href="http://litta.co/become-a-partner/">联系我们</a></li>
+                                                    <li id="menu-item-582" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-582"><a href="http://litta.co/invest-in-us/">关于主页</a></li>
+                                                </ul></div>					</nav><!-- #site-navigation -->
+                                        </div>
                 </div>
             </div>
         </div>
