修改样式及添加lab

--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
         }
         .search{
             float: left;
-            margin: 50px 0 0 15px;
+            margin: 25px 0 0 15px;
         }
         .search-text{
             width: 500px;
@@ -196,10 +196,9 @@
 <div class="bg">
     <div class="header">
             <ul class="left">
-                <li><a href="javascript:void(0);">图片</a></li>
-                <li><a href="javascript:void(0);">视频</a></li>
-                <li><a href="javascript:void(0);">学术</a></li>
-                <li><a href="javascript:void(0);">地图</a></li>
+                <li><a href="javascript:void(0);">校主页</a></li>
+                <li><a href="javascript:void(0);">新闻网</a></li>
+                <li><a href="javascript:void(0);">同济医学院</a></li>
                 <li><a href="javascript:void(0);">更多</a></li>
                 <li>|</li>
 <!--                <li><a href="javascript:void(0);">Office Online</a></li>-->
@@ -211,9 +210,9 @@
     </div>
     <div class="box">
         <div class="search-box">
-            <img src="images/hustlogo.png" width="150">
+            <img src="images/hustlogo.png" width="100">
             <div class="search">
-                <form name="search-form" action="https://cn.bing.com/search">
+                <form name="search-form" action="result1.html">
                     <input type="text" class="search-text" name="q" AutoComplete="off" x-webkit-speech=""/>
                     <input type="submit" class="search-btn" value=""/>
                 </form>
