--- a/lab1.html
+++ b/lab1.html
@@ -900,13 +900,13 @@
 
                     <ul class="repo-list">
                         <table class="table">
-                            <caption align="center">CGCL集群与网格计算湖北省重点实验室</caption>
+                            <caption align="center">智能与分布计算实验室</caption>
                             <thead>
                             </thead>
                             <tbody>
                             <tr>
                                 <th>实验室名称</th>
-                                <td><a href="http://grid.hust.edu.cn/">CGCL集群与网格计算湖北省重点实验室</a></td>
+                                <td><a href="http://idc.hust.edu.cn/">智能与分布计算实验室</a></td>
                             </tr>
                             <tr>
                                 <th>所属学院</th>
@@ -914,33 +914,30 @@
                             </tr>
                             <tr>
                                 <th rowspan="3" >研究方向</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=7&vid=1">系统软件与体系结构 </a></td>
+                                <td><a href="http://idc.hust.edu.cn/kyfx/sjwj.htm">数据挖掘 </a></td>
                             </tr>
                             <tr>
-                                <td><a href=http://grid.hust.edu.cn/content.php?id=1379&vid=1">云计算与移动计算 </a></td>
+                                <td><a href=http://idc.hust.edu.cn/kyfx/dsj.htm">大数据 </a></td>
                             </tr>
                             <tr>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=1380&vid=1">大数据 </a></td>
+                                <td><a href="http://idc.hust.edu.cn/kyfx/xtaq.htm">系统安全 </a></td>
                             </tr>
                             <tr>
                                 <th>研究团队</th>
-                                <td><a href="http://grid.hust.edu.cn/">金海</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">吴松</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">廖小飞</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">石宣化</a></td>
+                                <td><a href="http://grid.hust.edu.cn/">卢正鼎 </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">李瑞轩</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">李玉华 </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">辜希武 </a></td>
                             </tr>
                             <tr>
                                 <th>研究成果</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=19&vid=4">科研成果汇总</a></td>
+                                <td><a href="http://idc.hust.edu.cn/kycg/hjqk.htm">科研成果汇总</a></td>
                             </tr>
                             <tr>
                                 <th>实验室地址</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=41&vid=11">武汉市洪山区珞瑜路1037号, 华中科技大学东五楼2楼</a></td>
+                                <td><a href="http://idc.hust.edu.cn/fwzn/lxfs.htm">武汉市洪山区珞瑜路1037号 华中科技大学南一楼442室 </a></td>
                             </tr>
                             <tr>
                                 <th>联系电话</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">87541924、87543529、87557047</a></td>
-                            </tr>                            <tr>
-                                <th>邮箱</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">yukundu@yeah.net</a></td>
-                            </tr>
+                                <td><a href="http://idc.hust.edu.cn/fwzn/lxfs.htm">027-87544285</a></td>
+
                             </tbody>
                         </table>
                     </ul>
@@ -1007,6 +1004,122 @@
 
                 <h2 class="h6 text-uppercase border-bottom pb-5 pb-md-3">实验室地址</h2>
                 <dl class="mt-3 mb-6">
+<!--                    <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
+<!--                    <html xmlns="http://www.w3.org/1999/xhtml">-->
+<!--                    <head>-->
+<!--                        <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />-->
+<!--                        <meta name="keywords" content="百度地图,百度地图API，百度地图自定义工具，百度地图所见即所得工具" />-->
+<!--                        <meta name="description" content="百度地图API自定义地图，帮助用户在可视化操作下生成百度地图" />-->
+<!--                        <title>百度地图API自定义地图</title>-->
+<!--                        &lt;!&ndash;引用百度地图API&ndash;&gt;-->
+<!--                        <style type="text/css">-->
+<!--                            html,body{margin:0;padding:0;}-->
+<!--                            .iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}-->
+<!--                            .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}-->
+<!--                        </style>-->
+<!--                        <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>-->
+<!--                    </head>-->
+
+<!--                    <body>-->
+<!--                    &lt;!&ndash;百度地图容器&ndash;&gt;-->
+<!--                    <div style="width:300px;height:300px;border:#ccc solid 1px;" id="dituContent"></div>-->
+<!--                    </body>-->
+<!--                    <script type="text/javascript">-->
+<!--                        //创建和初始化地图函数：-->
+<!--                        function initMap(){-->
+<!--                            createMap();//创建地图-->
+<!--                            setMapEvent();//设置地图事件-->
+<!--                            addMapControl();//向地图添加控件-->
+<!--                            addMarker();//向地图中添加marker-->
+<!--                        }-->
+
+<!--                        //创建地图函数：-->
+<!--                        function createMap(){-->
+<!--                            var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图-->
+<!--                            var point = new BMap.Point(114.424367,30.517653);//定义一个中心点坐标-->
+<!--                            map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中-->
+<!--                            window.map = map;//将map变量存储在全局-->
+<!--                        }-->
+
+<!--                        //地图事件设置函数：-->
+<!--                        function setMapEvent(){-->
+<!--                            map.enableDragging();//启用地图拖拽事件，默认启用(可不写)-->
+<!--                            map.enableScrollWheelZoom();//启用地图滚轮放大缩小-->
+<!--                            map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)-->
+<!--                            map.enableKeyboard();//启用键盘上下左右键移动地图-->
+<!--                        }-->
+
+<!--                        //地图控件添加函数：-->
+<!--                        function addMapControl(){-->
+<!--                            //向地图中添加缩放控件-->
+<!--                            var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});-->
+<!--                            map.addControl(ctrl_nav);-->
+<!--                            //向地图中添加比例尺控件-->
+<!--                            var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});-->
+<!--                            map.addControl(ctrl_sca);-->
+<!--                        }-->
+
+<!--                        //标注点数组-->
+<!--                        var markerArr = [{point:"116.406164|39.913698",isOpen:0,icon:{w:23,h:25,l:46,t:21,x:9,lb:12}}-->
+<!--                            ,{title:"",content:"",point:"114.42417|30.517793",isOpen:0,icon:{w:21,h:21,l:46,t:0,x:6,lb:5}}-->
+<!--                        ];-->
+<!--                        //创建marker-->
+<!--                        function addMarker(){-->
+<!--                            for(var i=0;i<markerArr.length;i++){-->
+<!--                                var json = markerArr[i];-->
+<!--                                var p0 = json.point.split("|")[0];-->
+<!--                                var p1 = json.point.split("|")[1];-->
+<!--                                var point = new BMap.Point(p0,p1);-->
+<!--                                var iconImg = createIcon(json.icon);-->
+<!--                                var marker = new BMap.Marker(point,{icon:iconImg});-->
+<!--                                var iw = createInfoWindow(i);-->
+<!--                                var label = new BMap.Label(json.title,{"offset":new BMap.Size(json.icon.lb-json.icon.x+10,-20)});-->
+<!--                                marker.setLabel(label);-->
+<!--                                map.addOverlay(marker);-->
+<!--                                label.setStyle({-->
+<!--                                    borderColor:"#808080",-->
+<!--                                    color:"#333",-->
+<!--                                    cursor:"pointer"-->
+<!--                                });-->
+
+<!--                                (function(){-->
+<!--                                    var index = i;-->
+<!--                                    var _iw = createInfoWindow(i);-->
+<!--                                    var _marker = marker;-->
+<!--                                    _marker.addEventListener("click",function(){-->
+<!--                                        this.openInfoWindow(_iw);-->
+<!--                                    });-->
+<!--                                    _iw.addEventListener("open",function(){-->
+<!--                                        _marker.getLabel().hide();-->
+<!--                                    })-->
+<!--                                    _iw.addEventListener("close",function(){-->
+<!--                                        _marker.getLabel().show();-->
+<!--                                    })-->
+<!--                                    label.addEventListener("click",function(){-->
+<!--                                        _marker.openInfoWindow(_iw);-->
+<!--                                    })-->
+<!--                                    if(!!json.isOpen){-->
+<!--                                        label.hide();-->
+<!--                                        _marker.openInfoWindow(_iw);-->
+<!--                                    }-->
+<!--                                })()-->
+<!--                            }-->
+<!--                        }-->
+<!--                        //创建InfoWindow-->
+<!--                        function createInfoWindow(i){-->
+<!--                            var json = markerArr[i];-->
+<!--                            var iw = new BMap.InfoWindow("<b class='iw_poi_title' title='" + json.title + "'>" + json.title + "</b><div class='iw_poi_content'>"+json.content+"</div>");-->
+<!--                            return iw;-->
+<!--                        }-->
+<!--                        //创建一个Icon-->
+<!--                        function createIcon(json){-->
+<!--                            var icon = new BMap.Icon("images/loc1.png", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})-->
+<!--                            return icon;-->
+<!--                        }-->
+
+<!--                        initMap();//创建和初始化地图-->
+<!--                    </script>-->
+<!--                    </html>-->
                     <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
                     <html xmlns="http://www.w3.org/1999/xhtml">
                     <head>
@@ -1039,7 +1152,7 @@
                         //创建地图函数：
                         function createMap(){
                             var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-                            var point = new BMap.Point(114.424367,30.517653);//定义一个中心点坐标
+                            var point = new BMap.Point(114.420553,30.515454);//定义一个中心点坐标
                             map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中
                             window.map = map;//将map变量存储在全局
                         }
@@ -1063,8 +1176,7 @@
                         }
 
                         //标注点数组
-                        var markerArr = [{point:"116.406164|39.913698",isOpen:0,icon:{w:23,h:25,l:46,t:21,x:9,lb:12}}
-                            ,{title:"",content:"",point:"114.42417|30.517793",isOpen:0,icon:{w:21,h:21,l:46,t:0,x:6,lb:5}}
+                        var markerArr = [{title:"",content:"",point:"114.420122|30.515516",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
                         ];
                         //创建marker
                         function addMarker(){
