--- a/newresult3.html
+++ b/newresult3.html
@@ -2017,18 +2017,18 @@
         <div class="sfbg nojsv" style="margin-top:-20px">
             <div class="sfbgg"></div>
         </div>
-        <form class="tsf nj" action="/search" style="overflow:visible" id="tsf" method="GET" name="f"
+        <form class="tsf nj" action="newresult4.html" style="overflow:visible" id="tsf" method="GET" name="f"
               onsubmit="return q.value!=''" role="search">
             <div id="tophf"><input name="newwindow" value="1" type="hidden"><input name="safe" value="strict" type="hidden"><input
                     value="LAASXaSwFsiW8wXGspbICw" name="ei" type="hidden"></div>
             <div jsmodel="vWNDde" jsdata="MuIEvd;;ASI61E">
                 <div jscontroller="mvYTse" class="A8SBwf"
                      jsaction="DkpM0b:d3sQLd;IQOavd:dFyQEf;XzZZPe:jI3wzf;Aghsf:AVsnlb;iHd9U:Q7Cnrc;f5hEHe:G0jgYd;vmxUb:j3bJnb;R2c5O:LuRugf;qiCkJd:ANdidc;NOg9L:HLgh3;uGoIkd:epUokb;zLdLw:eaGBS;rcuQ6b:npT2md">
-                    <div class="logo"><a
-                            href="images/hustlogo.png"
+                    <div class="logo" style=" padding-left: 10px;"><a
+                            href="images/hustlogo4.png"
                             title="Google 首页" id="logo" data-hveid="7"><img
-                            src="images/hustlogo.png" alt="Google"
-                            width="64"></a></div>
+                            src="images/hustlogo4.png" alt="Google"
+                            height="30" ></a></div>
                     <div class="RNNXgb" jsname="RNNXgb">
                         <div class="SDkEP">
                             <div jscontroller="iDPoPb" class="a4bIc" jsname="gLFyf"
@@ -2255,7 +2255,7 @@
             <div class="col-12 px-2 py-2 py-md-3 d-lg-none d-flex">
                 <div class="flex-auto">
                     <!-- '"` --><!-- </textarea></xmp> --></option></form>
-                    <form class="js-site-search-form" action="/search" accept-charset="UTF-8" method="get"><input
+                    <form class="js-site-search-form" action="newresult4.html" accept-charset="UTF-8" method="get"><input
                             name="utf8" type="hidden" value="&#x2713;"/>
                         <input
                                 aria-label="Search GitHub"
@@ -2276,7 +2276,17 @@
             </div>
             <div class="col-12 col-md-9 float-left px-2 pt-3 pt-md-0 codesearch-results">
                 <div class="px-2">
-
+                    <div id="extabar">
+                        <div id="topabar" style="position:relative">
+                            <div class="ab_tnav_wrp" id="slim_appbar" style="margin-left: 0px">
+                                <div id="sbfrm_l">
+                                    <div id="resultStats" style="    padding-left: 0px">
+                                        <nobr> 找到88条结果&nbsp;</nobr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 <!--                    <div class="Box p-3 mb-4 d-flex">-->
 <!--                        <img src="images/logo1.png" width="64" height="64" class="d-block rounded-1 mr-3 flex-shrink-0"-->
@@ -2422,7 +2432,7 @@
                                     <a class="v-align-middle"
                                        data-hydro-click="{&quot;event_type&quot;:&quot;search_result.click&quot;,&quot;payload&quot;:{&quot;page_number&quot;:1,&quot;per_page&quot;:10,&quot;query&quot;:&quot;java&quot;,&quot;result_position&quot;:2,&quot;click_id&quot;:46844958,&quot;result&quot;:{&quot;id&quot;:46844958,&quot;global_relay_id&quot;:&quot;MDEwOlJlcG9zaXRvcnk0Njg0NDk1OA==&quot;,&quot;model_name&quot;:&quot;Repository&quot;,&quot;url&quot;:&quot;https://github.com/DuGuQiuBai/Java&quot;},&quot;client_id&quot;:&quot;832503728.1554952581&quot;,&quot;originating_request_id&quot;:&quot;A6DE:592A:738121:A30ADC:5D0A21AE&quot;,&quot;originating_url&quot;:&quot;https://github.com/search?q=java&quot;,&quot;referrer&quot;:&quot;https://github.com/&quot;,&quot;user_id&quot;:38208164}}"
                                        data-hydro-click-hmac="51f92827d76faa7e1ae7abe00abc9f7448664b4ade588afbee3f314889d15aa3"
-                                       href="/DuGuQiuBai/Java">计算机学院官网</a>
+                                       href="http://cs.hust.edu.cn/">计算机学院官网</a>
 
                                 </h3>
 
@@ -2500,7 +2510,7 @@
                                 <!--                                </div>-->
 
                                 <div class="pl-2 pl-md-0 text-right flex-auto min-width-0">
-                                    <a class="muted-link" href="/DuGuQiuBai/Java/stargazers">
+                                    <a class="muted-link" href="http://cs.hust.edu.cn/">
                                         <!--                                        <svg aria-label="star" class="octicon octicon-star" viewBox="0 0 14 16"-->
                                         <!--                                             version="1.1" width="14" height="16" role="img">-->
                                         <!--                                            <path fill-rule="evenodd"-->
@@ -2518,7 +2528,7 @@
                                     <a class="v-align-middle"
                                        data-hydro-click="{&quot;event_type&quot;:&quot;search_result.click&quot;,&quot;payload&quot;:{&quot;page_number&quot;:1,&quot;per_page&quot;:10,&quot;query&quot;:&quot;java&quot;,&quot;result_position&quot;:2,&quot;click_id&quot;:46844958,&quot;result&quot;:{&quot;id&quot;:46844958,&quot;global_relay_id&quot;:&quot;MDEwOlJlcG9zaXRvcnk0Njg0NDk1OA==&quot;,&quot;model_name&quot;:&quot;Repository&quot;,&quot;url&quot;:&quot;https://github.com/DuGuQiuBai/Java&quot;},&quot;client_id&quot;:&quot;832503728.1554952581&quot;,&quot;originating_request_id&quot;:&quot;A6DE:592A:738121:A30ADC:5D0A21AE&quot;,&quot;originating_url&quot;:&quot;https://github.com/search?q=java&quot;,&quot;referrer&quot;:&quot;https://github.com/&quot;,&quot;user_id&quot;:38208164}}"
                                        data-hydro-click-hmac="51f92827d76faa7e1ae7abe00abc9f7448664b4ade588afbee3f314889d15aa3"
-                                       href="/DuGuQiuBai/Java">智能与分布计算实验室</a>
+                                       href="lab1.html">智能与分布计算实验室</a>
 
                                 </h3>
 
@@ -2527,24 +2537,16 @@
                                 </p>
 
                                 <div class="topics-row-container col-12 col-md-9 d-inline-flex flex-wrap flex-items-center f6 my-1">
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/java" title="Topic: java"
-                                       data-ga-click="Topic, search results" data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:java,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1" >
                                         数据挖掘
                                     </a>
 
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/algorithms"
-                                       title="Topic: algorithms" data-ga-click="Topic, search results"
-                                       data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:algorithms,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1">
                                         大数据
                                     </a>
 
 
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/implementation"
-                                       title="Topic: implementation" data-ga-click="Topic, search results"
-                                       data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:implementation,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1" >
                                         系统安全
                                     </a>
 
@@ -2596,7 +2598,7 @@
                                 <!--                                </div>-->
 
                                 <div class="pl-2 pl-md-0 text-right flex-auto min-width-0">
-                                    <a class="muted-link" href="/DuGuQiuBai/Java/stargazers">
+                                    <a class="muted-link" href="lab1.html">
                                         <!--                                        <svg aria-label="star" class="octicon octicon-star" viewBox="0 0 14 16"-->
                                         <!--                                             version="1.1" width="14" height="16" role="img">-->
                                         <!--                                            <path fill-rule="evenodd"-->
@@ -2841,7 +2843,7 @@
 
 
                 <div class="d-sm-flex flex-justify-between flex-items-baseline border-bottom pb-5 pb-md-3 mb-3">
-                    <h2 class="h6 text-uppercase">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;热门搜索词</h2>
+                    <h2 class="h6 text-uppercase">热门搜索词</h2>
                 </div>
 
                 <a class="topic-tag topic-tag-link f6 my-1" href="/topics/angular" title="Topic: angular" data-ga-click="Topics, go to topic, location:related topics">
@@ -2868,7 +2870,25 @@
                     云存储
                 </a>
 
+                    <dl class="mt-3 mb-6"></dl>
 
+                    <h2 class="h6 text-uppercase border-bottom pb-5 pb-md-3">历史记录</h2>
+                    <dl class="mt-3 mb-6">
+                        <dt class="d-none f6 text-gray">
+
+                        </dt>
+                        <dd class="mb-2">
+
+                            <a href="" ><svg t="1561551328547" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                                             xmlns="http://www.w3.org/2000/svg" p-id="2325" width="16" height="16">
+                                <path d="M510.45 70.554c-243.163 0-442.115 198.951-442.115 442.115 0 243.16 198.952 442.11 442.116 442.11 243.159 0 442.11-198.95 442.11-442.11 0-243.165-198.951-442.115-442.11-442.115z m11.051 132.633c168.556 0 168.556 127.11 168.556 198.95 0 71.847-66.318 204.48-168.556 207.24-99.475 0-168.556-132.632-168.556-207.24 0.001-71.841 0.001-198.95 168.556-198.95z m-11.05 726.723c-127.11 0-243.164-58.03-320.534-149.211 11.051-27.635 24.868-58.03 44.212-74.607 41.446-33.162 165.79-88.425 165.79-88.425l77.37 149.215 13.816-35.923L469 686.747l44.212-44.208 44.212 44.208-19.345 46.974 11.055 35.924 80.132-146.45s124.343 55.262 165.793 88.424c19.34 13.813 33.157 38.685 41.447 60.787C761.9 869.12 643.082 929.91 510.45 929.91z m0 0"
+                                      fill="" p-id="2326"></path>
+                            </svg><span class="css-truncate css-truncate-target" title="vuejs/vue">金海</span></a>
+                        </dd>
+                        <dd class="mb-2">
+                            <a href="" ><svg t="1561713571623" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1829" width="16" height="16"><path d="M712.704 220.672c-135.68-135.68-355.84-135.68-491.52 0s-135.68 355.84 0 491.52 355.84 135.68 491.52 0 135.68-355.84 0-491.52zM145.92 787.456C-31.744 610.304-31.744 322.56 145.92 144.896c177.664-177.152 464.896-177.152 642.56 0 177.664 177.664 177.664 464.896 0 642.56s-465.408 177.664-642.56 0z m848.896 206.336c-24.064 24.064-63.488 24.064-87.552 0L819.2 906.24c-24.064-24.064-24.064-63.488 0-87.552 24.064-24.064 63.488-24.064 87.552 0l87.552 87.552c24.576 24.064 24.576 63.488 0.512 87.552z" p-id="1830"></path></svg><span class="css-truncate css-truncate-target" title="vuejs/vue">计算机</span></a>
+                        </dd>
+                    </dl>
 
             </div></div>
 
