--- a/lab2.html
+++ b/lab2.html
@@ -900,46 +900,45 @@
 
                     <ul class="repo-list">
                         <table class="table">
-                            <caption align="center">CGCL集群与网格计算湖北省重点实验室</caption>
+                            <caption align="center">数据科学与计算机视觉实验室</caption>
                             <thead>
                             </thead>
                             <tbody>
                             <tr>
                                 <th>实验室名称</th>
-                                <td><a href="http://grid.hust.edu.cn/">CGCL集群与网格计算湖北省重点实验室</a></td>
+                                <td><a href="http://bmal.hust.edu.cn/">数据科学与计算机视觉实验室</a></td>
                             </tr>
                             <tr>
                                 <th>所属学院</th>
-                                <td><a href="http://cs.hust.edu.cn/">计算机科学与技术学院</a></td>
+                                <td><a href="http://cs.hust.edu.cn/">电子信息与通信学院</a></td>
                             </tr>
                             <tr>
-                                <th rowspan="3" >研究方向</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=7&vid=1">系统软件与体系结构 </a></td>
+                                <th rowspan="2" >研究方向</th>
+                                <td><a href="http://bmal.hust.edu.cn/yjykf.htm">图像及视频分析与理解 </a></td>
                             </tr>
                             <tr>
-                                <td><a href=http://grid.hust.edu.cn/content.php?id=1379&vid=1">云计算与移动计算 </a></td>
+                                <td><a href="http://bmal.hust.edu.cn/yjykf.htm">医学图像处理 </a></td>
                             </tr>
                             <tr>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=1380&vid=1">大数据 </a></td>
-                            </tr>
-                            <tr>
-                                <th>研究团队</th>
-                                <td><a href="http://grid.hust.edu.cn/">金海</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">吴松</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">廖小飞</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">石宣化</a></td>
+                                <th><a href="http://bmal.hust.edu.cn/kytd.htm">研究团队</a></th>
+                                <td><a >尤新革 </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">袁巍</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">徐端全 </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">江国星
+                                </a></td>
                             </tr>
                             <tr>
                                 <th>研究成果</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=19&vid=4">科研成果汇总</a></td>
+                                <td><a href="http://bmal.hust.edu.cn/lzyzl.htm">科研成果汇总</a></td>
                             </tr>
                             <tr>
                                 <th>实验室地址</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=41&vid=11">武汉市洪山区珞瑜路1037号, 华中科技大学东五楼2楼</a></td>
+                                <td><a href="http://bmal.hust.edu.cn/jrwm.htm">国家防伪工程技术研究中心二楼201</a></td>
                             </tr>
                             <tr>
                                 <th>联系电话</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">87541924、87543529、87557047</a></td>
-                            </tr>                            <tr>
+                                <td><a href="http://bmal.hust.edu.cn/jrwm.htm">027-87544817</a></td>
+                            </tr>
+                            <tr>
                                 <th>邮箱</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">yukundu@yeah.net</a></td>
+                                <td><a href="http://bmal.hust.edu.cn/jrwm.htm">youxg@mail.hust.edu.cn</a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -1039,8 +1038,8 @@
                         //创建地图函数：
                         function createMap(){
                             var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-                            var point = new BMap.Point(114.424367,30.517653);//定义一个中心点坐标
-                            map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中
+                            var point = new BMap.Point(114.422909,30.514889);//定义一个中心点坐标
+                            map.centerAndZoom(point,18);//设定地图的中心点和坐标并将地图显示在地图容器中
                             window.map = map;//将map变量存储在全局
                         }
 
@@ -1063,8 +1062,7 @@
                         }
 
                         //标注点数组
-                        var markerArr = [{point:"116.406164|39.913698",isOpen:0,icon:{w:23,h:25,l:46,t:21,x:9,lb:12}}
-                            ,{title:"",content:"",point:"114.42417|30.517793",isOpen:0,icon:{w:21,h:21,l:46,t:0,x:6,lb:5}}
+                        var markerArr = [{title:"",content:"",point:"114.422981|30.514843",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
                         ];
                         //创建marker
                         function addMarker(){
