--- a/lab3.html
+++ b/lab3.html
@@ -900,13 +900,13 @@
 
                     <ul class="repo-list">
                         <table class="table">
-                            <caption align="center">CGCL集群与网格计算湖北省重点实验室</caption>
+                            <caption align="center">智能与嵌入式计算实验室</caption>
                             <thead>
                             </thead>
                             <tbody>
                             <tr>
                                 <th>实验室名称</th>
-                                <td><a href="http://grid.hust.edu.cn/">CGCL集群与网格计算湖北省重点实验室</a></td>
+                                <td><a href="http://iec.cs.hust.edu.cn/index.htm">智能与嵌入式计算实验室</a></td>
                             </tr>
                             <tr>
                                 <th>所属学院</th>
@@ -914,32 +914,33 @@
                             </tr>
                             <tr>
                                 <th rowspan="3" >研究方向</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=7&vid=1">系统软件与体系结构 </a></td>
+                                <td><a href="http://iec.cs.hust.edu.cn/index.htm">深度学习 </a></td>
                             </tr>
                             <tr>
-                                <td><a href=http://grid.hust.edu.cn/content.php?id=1379&vid=1">云计算与移动计算 </a></td>
+                                <td><a href="http://iec.cs.hust.edu.cn/index.htm">计算机视觉 </a></td>
                             </tr>
                             <tr>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=1380&vid=1">大数据 </a></td>
+                                <td><a href="http://iec.cs.hust.edu.cn/index.htm">监控视频大数据分析 </a></td>
                             </tr>
                             <tr>
-                                <th>研究团队</th>
-                                <td><a href="http://grid.hust.edu.cn/">金海</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">吴松</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">廖小飞</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">石宣化</a></td>
+                                <th><a href="http://iec.cs.hust.edu.cn/ry/gdyjry.htm">研究团队</a></th>
+                                <td><a >邹复好</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">李开</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">卢萍 </a>&nbsp;&nbsp;&nbsp;&nbsp</td>
                             </tr>
                             <tr>
                                 <th>研究成果</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=19&vid=4">科研成果汇总</a></td>
+                                <td><a href="http://iec.cs.hust.edu.cn/kycg/xslw.htm">科研成果汇总</a></td>
                             </tr>
                             <tr>
                                 <th>实验室地址</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=41&vid=11">武汉市洪山区珞瑜路1037号, 华中科技大学东五楼2楼</a></td>
+                                <td><a href="">华中科技大学-老保卫处101室</a></td>
                             </tr>
+<!--                            <tr>-->
+<!--                                <th>联系电话</th>-->
+<!--                                <td><a href="http://bmal.hust.edu.cn/jrwm.htm">027-87544817</a></td>-->
+<!--                            </tr>-->
                             <tr>
-                                <th>联系电话</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">87541924、87543529、87557047</a></td>
-                            </tr>                            <tr>
                                 <th>邮箱</th>
-                                <td><a href="http://grid.hust.edu.cn/content.php?id=40&vid=11">yukundu@yeah.net</a></td>
+                                <td><a href="">fuhao_zou@hust.edu.cn</a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -969,7 +970,7 @@
                     <dt class="d-none f6 text-gray">Wikipedia</dt>
                     <dd class="mb-2">
                         <svg class="octicon octicon-link text-gray-light mr-1" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg>
-                        <a href="https://en.wikipedia.org/wiki/Vue.js" data-ga-click="Topics, go to Wikipedia entry, location:topic page">智能与嵌入式计算实验室</a>
+                        <a href="https://en.wikipedia.org/wiki/Vue.js" data-ga-click="Topics, go to Wikipedia entry, location:topic page">数据科学与计算机视觉实验室</a>
                     </dd>
                 </dl>
 
@@ -1039,8 +1040,8 @@
                         //创建地图函数：
                         function createMap(){
                             var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-                            var point = new BMap.Point(114.424367,30.517653);//定义一个中心点坐标
-                            map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中
+                            var point = new BMap.Point(114.42004,30.520087);//定义一个中心点坐标
+                            map.centerAndZoom(point,18);//设定地图的中心点和坐标并将地图显示在地图容器中
                             window.map = map;//将map变量存储在全局
                         }
 
@@ -1063,8 +1064,8 @@
                         }
 
                         //标注点数组
-                        var markerArr = [{point:"116.406164|39.913698",isOpen:0,icon:{w:23,h:25,l:46,t:21,x:9,lb:12}}
-                            ,{title:"",content:"",point:"114.42417|30.517793",isOpen:0,icon:{w:21,h:21,l:46,t:0,x:6,lb:5}}
+                        var markerArr = [{title:"我的标记",content:"我的备注",point:"114.422981|30.514843",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
+                            ,{title:"",content:"",point:"114.420031|30.520157",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
                         ];
                         //创建marker
                         function addMarker(){
