修改搜索框位置

--- a/newresult3.html
+++ b/newresult3.html
@@ -2024,12 +2024,12 @@
             <div jsmodel="vWNDde" jsdata="MuIEvd;;ASI61E">
                 <div jscontroller="mvYTse" class="A8SBwf"
                      jsaction="DkpM0b:d3sQLd;IQOavd:dFyQEf;XzZZPe:jI3wzf;Aghsf:AVsnlb;iHd9U:Q7Cnrc;f5hEHe:G0jgYd;vmxUb:j3bJnb;R2c5O:LuRugf;qiCkJd:ANdidc;NOg9L:HLgh3;uGoIkd:epUokb;zLdLw:eaGBS;rcuQ6b:npT2md">
-                    <div class="logo" style=" padding-left: 10px;"><a
+                    <div class="logo" style="padding-left: 10px;top: 0px;"><a
                             href="images/hustlogo4.png"
                             title="Google 首页" id="logo" data-hveid="7"><img
                             src="images/hustlogo4.png" alt="Google"
                             height="30" ></a></div>
-                    <div class="RNNXgb" jsname="RNNXgb">
+                    <div class="RNNXgb" jsname="RNNXgb" style=" border-left-width: 1px;   margin-left: 20px;">
                         <div class="SDkEP">
                             <div jscontroller="iDPoPb" class="a4bIc" jsname="gLFyf"
                                  jsaction="h5M12e;input:d3sQLd;focus:dFyQEf;blur:jI3wzf">
@@ -2705,7 +2705,7 @@
                                     <a class="v-align-middle"
                                        data-hydro-click="{&quot;event_type&quot;:&quot;search_result.click&quot;,&quot;payload&quot;:{&quot;page_number&quot;:1,&quot;per_page&quot;:10,&quot;query&quot;:&quot;java&quot;,&quot;result_position&quot;:2,&quot;click_id&quot;:46844958,&quot;result&quot;:{&quot;id&quot;:46844958,&quot;global_relay_id&quot;:&quot;MDEwOlJlcG9zaXRvcnk0Njg0NDk1OA==&quot;,&quot;model_name&quot;:&quot;Repository&quot;,&quot;url&quot;:&quot;https://github.com/DuGuQiuBai/Java&quot;},&quot;client_id&quot;:&quot;832503728.1554952581&quot;,&quot;originating_request_id&quot;:&quot;A6DE:592A:738121:A30ADC:5D0A21AE&quot;,&quot;originating_url&quot;:&quot;https://github.com/search?q=java&quot;,&quot;referrer&quot;:&quot;https://github.com/&quot;,&quot;user_id&quot;:38208164}}"
                                        data-hydro-click-hmac="51f92827d76faa7e1ae7abe00abc9f7448664b4ade588afbee3f314889d15aa3"
-                                       href="/DuGuQiuBai/Java">CGCL集群与网格计算湖北省重点实验室</a>
+                                       href="lab.html">CGCL集群与网格计算湖北省重点实验室</a>
 
                                 </h3>
 
@@ -2714,24 +2714,16 @@
                                 </p>
 
                                 <div class="topics-row-container col-12 col-md-9 d-inline-flex flex-wrap flex-items-center f6 my-1">
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/java" title="Topic: java"
-                                       data-ga-click="Topic, search results" data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:java,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1" >
                                         系统软件与体系结构
                                     </a>
 
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/algorithms"
-                                       title="Topic: algorithms" data-ga-click="Topic, search results"
-                                       data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:algorithms,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1" >
                                         云计算与移动计算
                                     </a>
 
 
-                                    <a class="topic-tag topic-tag-link f6 my-1" href="/topics/implementation"
-                                       title="Topic: implementation" data-ga-click="Topic, search results"
-                                       data-octo-click="topic_click"
-                                       data-octo-dimensions="topic:implementation,repository_id:63477660,repository_nwo:TheAlgorithms/&lt;em&gt;Java&lt;/em&gt;,repository_public:true,repository_is_fork:false">
+                                    <a class="topic-tag topic-tag-link f6 my-1">
                                         大数据
                                     </a>
 
