--- a/newresult4.html
+++ b/newresult4.html
@@ -2024,12 +2024,12 @@
             <div jsmodel="vWNDde" jsdata="MuIEvd;;ASI61E">
                 <div jscontroller="mvYTse" class="A8SBwf"
                      jsaction="DkpM0b:d3sQLd;IQOavd:dFyQEf;XzZZPe:jI3wzf;Aghsf:AVsnlb;iHd9U:Q7Cnrc;f5hEHe:G0jgYd;vmxUb:j3bJnb;R2c5O:LuRugf;qiCkJd:ANdidc;NOg9L:HLgh3;uGoIkd:epUokb;zLdLw:eaGBS;rcuQ6b:npT2md">
-                    <div class="logo" style=" padding-left: 10px;"><a
+                    <div class="logo" style="padding-left: 10px;top: 0px;"><a
                             href="images/hustlogo4.png"
                             title="Google 首页" id="logo" data-hveid="7"><img
                             src="images/hustlogo4.png" alt="Google"
                             height="30" ></a></div>
-                    <div class="RNNXgb" jsname="RNNXgb">
+                    <div class="RNNXgb" jsname="RNNXgb" style=" border-left-width: 1px;   margin-left: 20px;">
                         <div class="SDkEP">
                             <div jscontroller="iDPoPb" class="a4bIc" jsname="gLFyf"
                                  jsaction="h5M12e;input:d3sQLd;focus:dFyQEf;blur:jI3wzf">
